--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ python-Levenshtein==0.12.0
 pytorch-pretrained-bert==0.3.0
 spacy==2.0.18
 tensorboard-logger==0.1.0
-torch==1.6.0+cu101
-torchvision==0.7.0+cu101
+torch==1.6.0
+torchvision==0.7.0
 tqdm==4.54.1
 transformers==2.8.0
